Some layout corrections

--- a/HaskellArticles.tex
+++ b/HaskellArticles.tex
@@ -424,7 +424,16 @@ These are split roughly in two groups: posts about how best to leverage the type
 
 Note that I'm explicitly not including articles and resources about basics or setup of the topics in question. Instead of ``what is a \texttt{Maybe} and why use it,'' think ``what are some typical patterns around using \texttt{Maybes} in a real codebase.'' Instead of ``what is property-based testing'', think ``here are best practices around choosing properties to test.'' Since there are already plenty of good introductory resources on things like ``how do I get started with QuickCheck'', we'll focus here instead on how best to use the tools we have.
 
-Posts in each section are roughly ordered by difficulty.
+I'm fully aware that this is not a complete listing even of topics that Haskell programmers know about and regularly make use of\footnote{Tagged datatypes, for instance. It's easy to explain what they are, but I haven't seen good examples of how people use them in a real codebase.}. If you feel there are articles missing from here that are clear, easy-to-understand, and go in-depth on how to use correctness-enforcing techniques, please let me know!
+
+Found this useful? Still have questions? Talk to me!
+
+\vspace{\baselineskip}
+
+\noindent Posts in each section are roughly ordered by difficulty.
+
+
+
 
 
 \part{Posts on designing and structuring code}
