--- a/hillel_wayne2.tex
+++ b/hillel_wayne2.tex
@@ -20,7 +20,8 @@ fields. So why haven't we heard of it before? There's only
 \href{https://medium.com/trustableai/testing-ai-with-metamorphic-testing-61d690001f5c}{one}
 article anywhere targeted at people outside academia. Let's make it two.
 
-\section{Background}\label{background}
+\section{Background}
+\label{background}
 
 Most written tests use \textbf{oracles}. That's where you know the
 answer and are explicitly checking that the computation gives you the
@@ -65,7 +66,8 @@ domains. If you had a function that determined whether or not a graph is
 acyclic, what property tests would you write? Would they give you
 confidence your function is right?
 
-\section{Motivation}\label{motivation}
+\section{Motivation}
+\label{motivation}
 
 Now take a more complex problem. Imagine we're trying to write an
 English speech-to-text (STT) processor. It takes a sound file and
@@ -98,7 +100,8 @@ So we have two problems. One, we need a wide variety of speech inputs.
 Two, we need a way to know make them into useful tests without spending
 hours manually transcribing the speech into oracles.
 
-\section{Metamorphic Testing}\label{metamorphic-testing}
+\section{Metamorphic Testing}
+\label{metamorphic-testing}
 
 That all treats the output in isolation. What if we embed it in a
 broader context? For example, if a given soundclip transcibes to output
@@ -166,7 +169,8 @@ search engine results with no filters to engine results with one filter
 and two filters. Most of the case studies I read only use two inputs,
 because even that is enough to find crazy bugs.
 
-\section{The Case Studies}\label{the-case-studies}
+\section{The Case Studies}
+\label{the-case-studies}
 
 Speaking of case studies: How effective is MT in practice? It's one
 thing to talk about a technique in abstract, or provide toy examples.
@@ -227,7 +231,8 @@ domains.
 
 
 \hypertarget{the-problem}{%
-\subsection{The Problem}\label{the-problem}}
+\subsection{The Problem}
+\label{the-problem}}
 
 Huh, they're all PDFs.
 
@@ -249,7 +254,8 @@ preprints\footnote{I had a second, refuted hypothesis:
   check for me and didn't find significant use.}.
 
 \hypertarget{learning-more}{%
-\subsection{Learning More}\label{learning-more}}
+\subsection{Learning More}
+\label{learning-more}}
 
 The inventor of MT is
 \href{https://www.swinburne.edu.au/science-engineering-technology/staff/profile/index.php?id=tychen}{TY
@@ -284,7 +290,8 @@ techniques.
 \emph{Thanks to \href{https://twitter.com/sindarknave}{Brian Ng} for
 help researching this.}
 
-\subsection{PS: Request}\label{ps-request}
+\subsection{PS: Request}
+\label{ps-request}
 
 It's not actually that surprising that I never heard of this before.
 There's a lot of really interesting, useful techniques that never leave
