--- a/HaskellArticles.tex
+++ b/HaskellArticles.tex
@@ -396,7 +396,7 @@ bibtotoc,						% Literaturverzeichnis im Inhalt
 
 %% Erzeugung von Verzeichnissen %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 {\sffamily
-\noindent This document is a compilation of web articles about Haskell, which was put together by William Yao. I was interested to have this in one document and not spread via different web pages, so I compiled them together in this document. 
+\noindent This document can be freely copied, shared and distritbuted under the Creative Commons CC BY-SA
 
 \vfill
 
@@ -411,10 +411,20 @@ The homepage for this document is:
 
 \tableofcontents			% Inhaltsverzeichnis
 \listoffigures				% Abbildungsverzeichnis
-\listoftables				% Tabellenverzeichnis
+%\listoftables				% Tabellenverzeichnis
 
 
 %% Der Text %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\chapter{Introduction}
+
+William Yao created a link collection (\href{https://williamyaoh.com/posts/2019-11-24-design-and-testing-articles.html}{see here}) of Haskell articles about design and testing. I did like this collection very much but wanted to have all of them in one document, with one formatting. So the idea of this document (which is now more like a book) was born. 
+
+I included Williams original comments to the articles at the beginning of each chapter. The articles itself were included as unchanged as possible. Sometimes the formatting needed to change, sometimes they referenced each other, sometimes \LaTeX{} needed to be convinced to apply a certain formatting. Anyway, now it is done, so I wish all of you readers a lot of fun reading this document while hopefully learning something new.
+
+\vspace{\baselineskip}
+\noindent \textit{Michael Oswald}
+
 
 \chapter{Introduction by William Yao}
 
