Small update of title page

--- a/HaskellArticles.tex
+++ b/HaskellArticles.tex
@@ -369,7 +369,7 @@ bibtotoc,						% Literaturverzeichnis im Inhalt
 \vfill
 
 
-\tiny \copyright{} by above mentioned authors, compilation by M. Oswald. You may freely copy and distribute this document.
+\tiny \copyright{} by above mentioned authors, compilation by M. Oswald.
 
 \texttt{\input{git_hash.tex}}
 
